--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^2.2.3",
     "@astrojs/sitemap": "^3.1.2",
     "astro": "^4.5.13",
+    "cheerio": "^1.0.0-rc.12",
     "katex": "^0.16.10",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
